Pavle izmjene (#45)
* Prebacen end point iz UserFilescontroller-a
u DocumentsController za dobijanje svih documenta
jedog user-a

* Izmjenjena registracija korisnika tako
da se sada dodaje tajni kljuc kao atribut

* dodan endpoint za usera da doboije key

* Izmjene :(